# zk-solvency

./: .gitignore  DEMO_WALKTHROUGH.md  README.md  auditor.html  context.md  dashboard.html  inclusion.html  index-backup.html  index.html  proof-details.html  reset-demo-data.sh  script.js  start-all-terminals.sh  start-all.sh  start-backend.sh  start-frontend.sh  start.sh  stitch-design.html  stop-all.sh  stop.sh  style.css
backend/: .env.example  .gitignore  README.md  drizzle.config.ts  package-lock.json  package.json  tsconfig.json
backend/drizzle/: 0000_new_greymalkin.sql
backend/scripts/: health-check.sh  reset-demo-data.sh
backend/src/: index.ts
backend/test/: merkle.test.ts  poseidon.test.ts
frontend/: .env.example  DOCS_INDEX.md  IMPLEMENTATION.md  IMPROVEMENTS.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppLayout.tsx  CountUpNumber.tsx  ErrorBoundary.tsx  Footer.tsx  HashDisplay.tsx  Hero.tsx  LoadingSkeleton.tsx  MerklePathVisualizer.tsx  Navbar.tsx  ProofCountdown.tsx  SolvencyHistoryChart.tsx  SolvencyRatioGauge.tsx  StatusBadge.tsx  WalletConnect.tsx  WalletConnectClient.tsx  WalletConnectInner.tsx  WalletModal.tsx
frontend/hooks/: useInclusionProof.ts  useLiveProof.ts  useSolvencyHistory.ts
frontend/lib/: env.ts  mockData.ts  types.ts  wagmi.ts
layer3-4/: .env.example  README.md  package-lock.json  package.json
layer3-4/cairo/: Scarb.toml
layer3-4/circuits/host/: Cargo.toml
layer3-4/circuits/host/src/: main.rs
(+81 files in other folders)
