[package]
name = "host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
sp1-sdk = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"
dotenvy = "0.15"
bincode = "1.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }


